--- a/style.css
+++ b/style.css
@@ -13,11 +13,12 @@ body{
     top: calc(50% - 90px);
     left: calc(50% - 180px);
     transform: (-50%, -50%);
-    border: solid; 
+    border: solid;
+    border-color: #a6a39a;
     text-wrap: wrap;
     width: fit-content; 
     backdrop-filter: blur(4px);
-    background-color: rgba(0, 0, 0, 0.125);
+    background-color: rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     padding: 6px;
 }
@@ -120,6 +121,7 @@ a{
 .desktopApps img{
     width: 64px;
     height: 64px;
+    object-fit: cover;
     border-radius: 12px;
 }
 
@@ -127,4 +129,13 @@ a{
     background-color: rgba(256, 256, 256, 0.5);
     border-radius: 12px;
     padding: 2px;
+}
+
+.repo{
+    margin-right: 30px;
+}
+.repo p{
+    width: min-content;
+    text-align: center;
+    word-wrap: break-word;
 }
